Added logo and navbar

--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage - Bean Garden</title>
+  <title>Homepage - The Bean Garden</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <div class="page-container">
+
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <div class="logo-container">
+            <img src="./img/cafelogo_steamless.svg" alt="###">
+            <h2><a href="./index.html">The Bean Garden</a></h2>
+          </div>
+          <ul>
+            <li><a href="./menu.html">Menu</a></li>
+            <li><a href="./location.html">Location</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-text">
+            <h1>Lorem Ipsum hero text</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatem laudantium illo cupiditate. Ratione beatae dolorum et quis excepturi sunt ea voluptatem consectetur, libero blanditiis, nostrum distinctio repudiandae at ab?</p>
+            <a href="./menu.html" class="button light">Menu</a>
+          </div>
+        </div>
+      </section>
+    
+      <section class="content">
+        <div class="container">
+          <img src="###" alt="####">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ratione sunt hic vero neque officia nostrum voluptas nobis quam dignissimos quasi eos at, assumenda fuga non fugiat. Magnam, ullam error. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto ducimus quisquam voluptate cumque nisi eligendi alias esse sit distinctio! Quo provident rem molestiae repudiandae incidunt nostrum inventore delectus tempora eum.</p>
+        </div>
+      </section>
+    </main>
+    
+
+  </div>
+
+
+
 </body>
 </html>
