added font, styling hero text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
           <div class="hero-text">
             <h1>Lorem Ipsum hero text</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatem laudantium illo cupiditate. Ratione beatae dolorum et quis excepturi sunt ea voluptatem consectetur, libero blanditiis, nostrum distinctio repudiandae at ab?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatem laudantium illo cupiditate.</p>
             <a href="./menu.html" class="button light">Menu</a>
           </div>
         </div>
