--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <header>
       <nav class="navbar">
         <div class="container">
-          <div class="logo-container">
-            <img src="./img/cafelogo_steamless.svg" alt="Bean Garden's logo of a cup of coffee">
-            <h2><a href="./index.html">The Bean Garden</a></h2>
-          </div>
+            <a href="./index.html" class="logo-container">
+              <img src="./img/cafelogo_steamless.svg" alt="Bean Garden's logo of a cup of coffee">
+              <h2>The Bean Garden</h2>
+            </a>
+          
           <ul>
             <li><a href="./menu.html">Menu</a></li>
             <li><a href="./location.html">Location</a></li>
