Formatted grid and tables

--- a/menu.html
+++ b/menu.html
@@ -28,8 +28,7 @@
 
     <main class="menu">
       <h1>Menu</h1>
-      <div class="menu-section" id="menu1">
-        <table>
+        <table class="menu-section" id="menu1">
           <thead>
             <tr>
               <th><hr></th>
@@ -60,10 +59,99 @@
             </tr>
           </tbody>
         </table>
-        
-        
-  
-      </div>
+        <table class="menu-section" id="menu2">
+          <thead>
+            <tr>
+              <th><hr></th>
+              <th>Coffee</th>
+              <th><hr></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="menu-section" id="menu3">
+          <thead>
+            <tr>
+              <th><hr></th>
+              <th>Coffee</th>
+              <th><hr></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="menu-section" id="menu4">
+          <thead>
+            <tr>
+              <th><hr></th>
+              <th>Coffee</th>
+              <th><hr></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+            <tr>
+              <td>Item</td>
+              <td><hr></td>
+              <td>Cost</td>
+            </tr>
+          </tbody>
+        </table>
     </main>
 
 
