Added content, styled and gridded

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     
       <section class="content">
         
-          <img src="./img/anshu-a-WqiebiDxjys-unsplash.jpg" alt="A table with a glass of iced coffee on a chopping board, with a small potted plant behind">
-          <div class="content-text">
+          <img src="./img/anshu-a-WqiebiDxjys-unsplash.jpg" alt="A table with a glass of iced coffee on a chopping board, with a small potted plant behind" class="background">
+          <div class="content-text background">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ratione sunt hic vero neque officia nostrum voluptas nobis quam dignissimos quasi eos at, assumenda fuga non fugiat. Magnam, ullam error.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto ducimus quisquam voluptate cumque nisi eligendi alias esse sit distinctio! Quo provident rem molestiae repudiandae incidunt nostrum inventore delectus tempora eum.</p>
           </div>
