--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
 
-    <main class="menu">
+    <main class="menu background">
       <h1>Menu</h1>
         <table class="menu-section" id="menu1">
           <thead>
