add image border

--- a/location.html
+++ b/location.html
@@ -74,7 +74,7 @@
           </tr>
         </tbody>
       </table>
-      <img src="./img/MapcapturePin.PNG" alt="Map with a pin marking the location of the cafe" id="map-img">
+      <img src="./img/MapcapturePin.PNG" alt="Map with a pin marking the location of the cafe" class="background" id="map-img">
       <p class="address">123 Lorem Ipsum street,<br> Suburb, State, 9001</p>
     </main>
 
