Created form element, started styling

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,45 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+   <div class="page-container">
   
+    <header>
+      <nav class="navbar">
+        <div class="container">
+            <a href="./index.html" class="logo-container">
+              <img src="./img/cafelogo_steamless.svg" alt="Bean Garden's logo of a cup of coffee">
+              <h2>The Bean Garden</h2>
+            </a>
+          
+          <ul>
+            <li><a href="./menu.html">Menu</a></li>
+            <li><a href="./location.html">Find us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="contact background">
+      <h1>Contact</h1>
+      <form action="#">
+        <div class="inputs">
+          <label for="name"></label>
+          <input type="text" id="name" class="background" placeholder="Name">
+        </div>
+        <div class="inputs">
+          <label for="email"></label>
+          <input type="email" id="email" class="background" placeholder="Email">
+        </div>
+        <div class="inputs">
+          <label for="message"></label>
+          <textarea id="message" class="background" placeholder="Message..."></textarea>
+        </div>
+        <div>
+          <button type="submit">Send</button>
+        </div>
+      </form>
+    </main>
+   </div>
 </body>
 </html>
