--- a/location.html
+++ b/location.html
@@ -19,8 +19,8 @@
           
           <ul>
             <li><a href="./menu.html">Menu</a></li>
-            <li><a href="./location.html">Location</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./location.html">Find us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
           </ul>
         </div>
       </nav>
