Location page title change

--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Location - The Bean Garden</title>
+  <title>Find us - The Bean Garden</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     </header>
 
     <main class="location background">
-      <h1>Location</h1>
+      <h1>Find us</h1>
       <table class="business-hours">
         <thead>
           <tr>
