--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="UALVr1tHXAYsACBJZcfPL7S4qnHuklAZR7a63lvb4WI" />
   <title>Homepage - The Bean Garden</title>
   <link rel="stylesheet" href="./style.css">
 </head>
