--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="UALVr1tHXAYsACBJZcfPL7S4qnHuklAZR7a63lvb4WI" />
+  <meta name="description" content="Enjoy the best affordable coffee and breakfast in Moorabbin at The Bean Garden.">
   <title>Homepage - The Bean Garden</title>
   <link rel="stylesheet" href="./style.css">
 </head>
