--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       <section class="hero">
         <div class="container">
           <div class="hero-text">
-            <h1>Lorem Ipsum hero text</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatem laudantium illo cupiditate.</p>
+            <h1>The Best Breakfast Cafe in Moorabbin</h1>
+            <p>Looking for somewhere quiet to study or dine?</p>
+            <p>Come and enjoy our specialty coffee and a delicious breakfast at our cozy cafe.</p>
             <a href="./menu.html" class="button light">Menu</a>
           </div>
         </div>
