Menu items keywords, description, location keywords

--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="View our affordable coffees and food items on our menu.">
   <title>Menu - The Bean Garden</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -32,30 +33,30 @@
           <thead>
             <tr>
               <th><hr></th>
-              <th>Coffee</th>
+              <th>Hot Coffee</th>
               <th><hr></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Item</td>
+              <td>Latte</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$3.50</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Espresso</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$4.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Mocha</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$4.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Cappucino</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$3.00</td>
             </tr>
           </tbody>
         </table>
@@ -63,30 +64,30 @@
           <thead>
             <tr>
               <th><hr></th>
-              <th>Coffee</th>
+              <th>Cold drinks</th>
               <th><hr></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Item</td>
+              <td>Iced Latte</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$4.50</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Iced Mocha</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$5.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Milkshakes</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$5.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Orange juice</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$6.00</td>
             </tr>
           </tbody>
         </table>
@@ -94,61 +95,57 @@
           <thead>
             <tr>
               <th><hr></th>
-              <th>Coffee</th>
+              <th>Breakfast</th>
               <th><hr></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Item</td>
+              <td>Eggs benedict</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$15.50</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Egg & Bacon</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$6.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Focaccia</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$7.50</td>
             </tr>
-            <tr>
-              <td>Item</td>
-              <td><hr></td>
-              <td>Cost</td>
-            </tr>
+            
           </tbody>
         </table>
         <table class="menu-section" id="menu4">
           <thead>
             <tr>
               <th><hr></th>
-              <th>Coffee</th>
+              <th>Sweets</th>
               <th><hr></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Item</td>
+              <td>Muffins</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$5.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Cheesecake</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$4.00</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Tiramisu</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$5.50</td>
             </tr>
             <tr>
-              <td>Item</td>
+              <td>Carrot cake</td>
               <td><hr></td>
-              <td>Cost</td>
+              <td>$4.50</td>
             </tr>
           </tbody>
         </table>
