Replaced homepage placeholder text

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         
           <img src="./img/anshu-a-WqiebiDxjys-unsplash.jpg" alt="A table with a glass of iced coffee on a chopping board, with a small potted plant behind" class="background">
           <div class="content-text background">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ratione sunt hic vero neque officia nostrum voluptas nobis quam dignissimos quasi eos at, assumenda fuga non fugiat. Magnam, ullam error.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto ducimus quisquam voluptate cumque nisi eligendi alias esse sit distinctio! Quo provident rem molestiae repudiandae incidunt nostrum inventore delectus tempora eum.</p>
+            <p>At The Bean Garden, our coffee beans are specially curated and grown in our plantation up in Queensland.</p>
+            <p>Our farmhands are given fair wages and working conditions, so that they can effectively cultivate our coffea plants to produce the best coffee for our customers and ourselves.</p>
+            <p>We've decorated our cafe to reflect the plant life of the tropics where coffee is grown, and bring a cozy atmosphere to our customers.</p>
           </div>
         
       </div>
