--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="google-site-verification" content="UALVr1tHXAYsACBJZcfPL7S4qnHuklAZR7a63lvb4WI" />
   <meta name="description" content="Enjoy the best affordable coffee and breakfast in Moorabbin at The Bean Garden.">
   <title>Homepage - The Bean Garden</title>
+  <link rel="canonical" href="https://euanr-d.github.io/FEDD-AT2-Cafe/">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
